test/golden/core/syntax-bnfc-error/diagnostics.txt
test/golden/core/syntax-bnfc-error/input.yqst:6:1: [ERROR_SYNTAX]
syntax error at line 6, column 1 before `}'
> }
  ^
